# Sintaxlab.org

./: .gitignore  Readme.md
ansible/playbooks/: provision.yaml
ansible/storage/: nginx.conf
db/: Populating Pinecone.ipynb  pyproject.toml  utils.py
db/data/: article.txt  interview.txt  summary.txt
terraform/: main.tf  providers.tf  variables.tf
