[tool.poetry]
name = "populating pinecone"
version = "0.1.0"
description = ""
authors = ["eddysanoli <eddysanoli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
pinecone-client = "^2.2.2"
transformers = "^4.30.2"
openai = "^0.27.8"
numpy = "^1.25.0"
ipykernel = "^6.23.3"
torch = "^2.0.1"
ipywidgets = "^8.0.6"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
